# Master-Thesis-ESCP

./: .gitignore  NORTHSTAR.md  README.md  dataset.csv
.github/workflows/: ci.yml
apps/research-ui/: Dockerfile  README.md  app.py  requirements.txt
apps/worker-api/: README.md  package.json  tsconfig.json  wrangler.toml
apps/worker-api/migrations/: 0001_init.sql
apps/worker-api/src/: index.ts
cloudbuild/: enrichment.yaml  mapping.yaml  pipeline.yaml  research-ui.yaml
docs/: architecture.md  research-foundation.md  research_notes.md  variable_definitions.yml
docs/issue-tracking/: issue-12.md  issue-13.md  issue-14.md  issue-15.md  issue-17.md  issue-18.md  issue-19.md  issue-20.md  issue-23.md  issue-24.md  issue-25.md  issue-26.md  issue-27.md
jobs/analysis/: README.md  requirements.txt
jobs/analysis/output/: correlation_report.md  correlation_results.csv  eda_summary.md  (+10 more)
jobs/enrichment/: Dockerfile  README.md  pyproject.toml
jobs/mapping/: Dockerfile  README.md  pyproject.toml
jobs/mapping/src/mapping/: __init__.py  freeze.py  propose.py  utils.py
jobs/mapping/tests/: __init__.py  test_utils.py
jobs/pipeline/: Dockerfile  README.md  pyproject.toml
local_store/research/: README.md  claim_paper_links.jsonl  paper_edges.jsonl  papers.jsonl
shared/config/: column_map.yml  feature_list.yml
shared/schemas/: cleaning_manifest.schema.json  enrichment_manifest.schema.json  run_index.schema.json
skills/analysis-openalex/: SKILL.md
skills/master-thesis-admin/: SKILL.md
tools/: repo_admin.py
tools/tests/: test_repo_admin.py
(+15 files in other folders)
