[project]
name = "mapping-job"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "google-genai>=0.6.0",
  "pandas>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0"
]

[project.scripts]
propose_mappings = "mapping.propose:main"
freeze_mapping_bundle = "mapping.freeze:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
